update the notebook

--- a/simple-otel-openlit.ipynb
+++ b/simple-otel-openlit.ipynb
@@ -229,7 +229,7 @@
     }
    ],
    "source": [
-    "!pip install langchain_openai openlit"
+    "# !pip install langchain_openai openlit"
    ]
   },
   {
